--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@babel/core": "^7.6.2",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "babel-jest": "^24.9.0",
+    "babel-polyfill": "^6.26.0",
     "eslint": "^5.9.0",
     "gh-pages": "^2.1.1",
     "htmlhint": "^0.11.0",
-    "jest": "^24.9.0",
     "opener": "^1.5.1",
     "serve": "^11.0.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
