--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "gh-pages": "^2.1.1",
     "htmlhint": "^0.11.0",
     "opener": "^1.5.1",
-    "serve": "^11.0.0",
-    "sweetalert": "^2.1.2"
+    "serve": "^11.0.0"
   },
   "devDependencies": {
     "jest": "^24.9.0"
